--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "emitDeclarationOnly": true,
     "declaration": true,
     "verbatimModuleSyntax": true,
-    "outDir": "dist",
 
     // Best practices
     "strict": true,
@@ -25,5 +24,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
   }
-  , "exclude": ["*.test.ts"]
+  , "exclude": ["*.test.ts", "dist/**"]
 }
